# rag-mini

./: .env.example  .gitignore  PARAMETERS.md  README.md  mise.toml  pyproject.toml
docker/: Dockerfile.elasticsearch  docker-compose.yml
src/: config.py  embedding.py  indexer.py  llm.py  main.py  match.py  models.py  parsers.py  splitter.py
tests/: __main__.py  debug_recall.py  eval.py  eval_dataset.json  eval_retrieval.py  test_eval_metrics.py  test_indexer_metadata.py  test_match.py  test_parsers.py  test_splitter.py
