[project]
name = "rag"
version = "0.1.0"
description = "最小 RAG demo — 基于 Elasticsearch + Ollama"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "elasticsearch>=8.12,<9.0",
    "langchain-text-splitters>=1.1",
    "requests>=2.31",
    "tenacity>=8.0",
    "python-dotenv>=1.0",
    "pymupdf>=1.27.2.3",
]

[project.scripts]
rag-query = "src.main:main"
rag-index = "src.indexer:main"

[[tool.uv.index]]
name = "aliyun"
url = "https://mirrors.aliyun.com/pypi/simple/"
default = true
