[project]
name = "rag"
version = "0.2.0"
description = "最小 RAG demo — 基于 sqlite-vec + FTS5 + Ollama"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "sentence-transformers>=4.1",
    "transformers>=4.51",
    "requests>=2.31",
    "tenacity>=8.0",
    "python-dotenv>=1.0",
    "docling>=2.0",
    "sqlite-vec>=0.1,<0.2",
    "jieba>=0.42",
]

[project.scripts]
rag-query = "src.main:main"
rag-index = "src.indexer:main"

[tool.uv]
package = true

[[tool.uv.index]]
name = "aliyun"
url = "https://mirrors.aliyun.com/pypi/simple/"
default = true
